Epoxy基类搭建完成

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,10 @@ android {
         jvmTarget = "1.8"
     }
 
+    kapt {
+        correctErrorTypes = true
+    }
+
     buildTypes {
         release {
             minifyEnabled false
