--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,12 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [AROUTER_MODULE_NAME: project.getName()]
+            }
+        }
     }
 
     compileOptions {
@@ -51,4 +57,12 @@ dependencies {
     implementation project(':oa')
     implementation project(':ring')
     kapt 'com.airbnb.android:epoxy-processor:3.8.0'
+
+    // 哆啦A梦调试工具
+    debugImplementation 'com.didichuxing.doraemonkit:doraemonkit:3.0.2'
+    releaseImplementation 'com.didichuxing.doraemonkit:doraemonkit-no-op:3.0.2'
+
+    // ARouter
+    implementation 'com.alibaba:arouter-api:1.5.0'
+    kapt 'com.alibaba:arouter-compiler:1.2.2'
 }
