--- a/comm/src/main/AndroidManifest.xml
+++ b/comm/src/main/AndroidManifest.xml
@@ -1,3 +1,13 @@
-<manifest package="space.lianxin.comm">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="space.lianxin.comm">
+
+    <application>
+
+        <meta-data
+            android:name="space.lianxin.comm.config.ModuleConfig"
+            android:value="ConfigModule" />
+        
+    </application>
+
 
 </manifest>
