--- a/library_module_build.gradle
+++ b/library_module_build.gradle
@@ -5,6 +5,14 @@ apply plugin: 'kotlin-kapt'
 
 android {
 
+    defaultConfig {
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [AROUTER_MODULE_NAME: project.getName()]
+            }
+        }
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -29,6 +37,10 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.core:core-ktx:1.3.2'
+
+    // ARouter
+    implementation 'com.alibaba:arouter-api:1.5.0'
+    kapt 'com.alibaba:arouter-compiler:1.2.2'
 
     api project(':comm')
     kapt 'com.airbnb.android:epoxy-processor:3.8.0'
