--- a/ring/src/main/AndroidManifest.xml
+++ b/ring/src/main/AndroidManifest.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="space.lianxin.ring">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="space.lianxin.ring">
+
+    <application>
+        <activity android:name=".RingMainActivity" />
+    </application>
 
 </manifest>
