--- a/comm/build.gradle
+++ b/comm/build.gradle
@@ -59,4 +59,6 @@ dependencies {
     // SmartRefreshLayout
     api 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.2'
     kapt 'com.airbnb.android:epoxy-processor:3.8.0'
+    // ARouter
+    api 'com.alibaba:arouter-api:1.5.0'
 }
