ring模块样例代码。

--- a/ring/src/main/AndroidManifest.xml
+++ b/ring/src/main/AndroidManifest.xml
@@ -3,7 +3,12 @@
     package="space.lianxin.ring">
 
     <application>
-        <activity android:name=".RingMainActivity" />
+        <activity android:name=".component.main.ui.RingMainActivity" />
+
+        <meta-data
+            android:name="space.lianxin.ring.config.ModuleConfig"
+            android:value="ConfigModule" />
+
     </application>
 
 </manifest>
